XWIKI-12332: Add support for Nested Spaces in the Office Importer UI.
* Hide the childNamingMethod input if the target page is not terminal
* Adding tests for it
* Speed-up the tests

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -125,7 +125,11 @@
       #end
     #end
     <dt><label>$services.localization.render('core.create.type')</label></dt>
-    <dd>#xwikiSelect('type', $options, 'blank', false, 'xwiki-select-small')</dd>
+    #set ($defaultValue = $request.type)
+    #if ("$!defaultValue" == '')  
+      #set ($defaultValue = 'blank')
+    #end
+    <dd>#xwikiSelect('type', $options, $defaultValue, false, 'xwiki-select-small')</dd>
   #else
     ## TODO: add the data-allowed-spaces for this template
     <input type="hidden" name="templateprovider" value="$template" />
