XWIKI-12576: 'Administer Page' - 'Page Rights' UI is not setting the rights.
* Fix escaping problem.

(cherry picked from commit ad15982cc1be86fcae9bd088fd8fd6cde3c7163d)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/rightsUI.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/rightsUI.vm
@@ -253,7 +253,7 @@ $xwiki.ssfx.use('js/xwiki/table/livetable.css', true)
       window.saveUrl = "$saveUrl";
       window.saveUrl.replace(/&amp;/g, "&");
       
-      var targetDocument = new XWiki.Document(XWiki.Model.resolve("$services.model.serialize($targetDocument.documentReference, 'default')", XWiki.EntityType.DOCUMENT));
+      var targetDocument = new XWiki.Document(XWiki.Model.resolve("$escapetool.javascript($services.model.serialize($targetDocument.documentReference, 'default'))", XWiki.EntityType.DOCUMENT));
       
       window.currentUser = "$!{escapetool.javascript($xcontext.user)}";
       window.unregUser = "XWiki.XWikiGuest";
