[misc] bullet-proof displaying the extension name

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/diff_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/diff_macros.vm
@@ -533,7 +533,8 @@ diff$id.hashCode()##
 #macro (diffVersion $version)
 #if ($version.id && $version.version)
 ## Seems to be an extension id.
-$services.extension.local.repository.resolve($version).name ${version.version}##
+#set ($extension = $services.extension.local.repository.resolve($version))
+#if ($extension)$extension.name#else$version.id#end ${version.version}##
 #else
 $!version##
 #end
