XWIKI-12635: Search input improvements on the top bar.
* Better look (the search button has the same height now than the other buttons of the top bar).

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
@@ -42,6 +42,8 @@
 
 #globalsearch {
 
+  margin: 0;
+
   // Remove the bootstrap border on the form when the screen is small
   @media (max-width: @screen-sm-max) {
     border: none;
@@ -53,6 +55,9 @@
     border: 1px solid @navbar-default-link-hover-bg;
     box-shadow: none;
     color: @navbar-default-link-color;
+    height: @navbar-height;
+    margin: 0;
+    padding: 10px @navbar-padding-horizontal;
     &:hover,
     &:focus {
       background-color: @navbar-default-link-hover-bg;
@@ -63,8 +68,8 @@
   // The global search input
   #headerglobalsearchinput { // we need to be that specific to be applied
     border-radius: 0;
-    min-width: 0;
     border: 0;
+    min-width: 0;
     transition: width 0.3s, padding 0.3s;
     width: 200px; // we need to set a width in pixels otherwise the transition is not applied nicely
   }
