XWIKI-12665: Display the language of the document when computing changes made to the wiki pages of an installed extension XWIKI-12666: When computing changes add local links in Detail View for documents which weren't deleted

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/diff.css
@@ -113,10 +113,17 @@ dl.diff-group > dd > dl {
   color: #D0B44C;
 }
 
-.diff-item-hint {
+.diff-item-locale, .diff-item-hint {
   color: $theme.textSecondaryColor;
-  display: block;
   font-size: 65%;
+}
+
+.diff-item-locale {
+  vertical-align: middle;
+}
+
+.diff-item-hint {
+  display: block;
   margin-top: .3em;
 }
 
