XWIKI-11767: Make the Wiki home page logo point to the Wiki's home instead of hardcoding it Main.WebHome - Using XWiki.getURL to resolve the wiki's homepage.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/companylogo.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/companylogo.vm
@@ -27,7 +27,7 @@
   #end
 #end
 <div id="companylogo">
-  <a href="$!xwiki.getURL($services.model.resolveDocument('', 'default', $doc.documentReference.extractReference('WIKI')))" title="Home" rel="home" #if(!$displayPageHeader)class="navbar-brand"#end>
+  <a href="$!xwiki.getURL($services.wiki.currentWikiDescriptor.mainPageReference)" title="Home" rel="home" #if(!$displayPageHeader)class="navbar-brand"#end>
     <img src="$!logourl" alt="Wiki Logo"/>
   </a>
 </div>
