--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/search/searchSuggest.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/search/searchSuggest.css
@@ -5,6 +5,14 @@ div.suggestItems.searchSuggest {
   box-shadow:3px 3px 5px;
 }
 
+.xlist .xitem .xitemcontainer {
+  padding: 0;
+}
+
+.xlist .xitem .xitemcontainer:hover {
+  background-color: inherit;
+}
+
 ul.xlist li.showAllResults {
   padding:0;
 }
