XWIKI-12608: Inconsistencies between Index and Sibling/Children LiveTables.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
@@ -447,3 +447,13 @@ table.livetable {
   left: 0px;
 }
 /* </Compatibility> */
+
+.xwiki-livetable .breadcrumb {
+  margin: 0;
+  background-color: transparent;
+  padding: 0;
+}
+
+.xwiki-livetable .breadcrumb .active a{
+  color: $theme.linkColor;
+}
