--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/children.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/children.vm
@@ -45,8 +45,8 @@
     #set ($colprops = {
       'doc.title'    : { 'link' : 'view' },
       'doc.author'   : { 'link' : 'author', 'type': 'text', 'filterable': true},
-      'doc.location' : { 'link' : 'view', 'type': 'text', 'filterable': true},
-      '_actions'     : { 'actions': ['copy', 'delete', 'rename'] }
+      'doc.location' : { 'type': 'text', 'filterable': true, 'html': true},
+      '_actions'     : { 'actions': ['copy', 'rename', 'rights', 'delete'] }
     })
     #set ($queryFilters = "unique")
     #if ("$!request.displayHidden" == '')
@@ -59,6 +59,8 @@
       'outputOnlyHtml' : true
     })
     #livetable('childrenIndex' $collist $colprops $options)
+    ## Load the hierarchy JS file because the locations of documents in the livetable results are displayed as hierarchy
+    #set ($discard = $xwiki.jsfx.use('uicomponents/hierarchy/hierarchy.js', {'forceSkinAction': true}))
   #end
 #end
 #######################################################
