XWIKI-12714: "template" parameter does not work in the create action UI - Forwarding the "template" parameter, if it's being provided in the request.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -126,13 +126,12 @@
     #end
     <dt><label>$services.localization.render('core.create.type')</label></dt>
     #set ($defaultValue = $request.type)
-    #if ("$!defaultValue" == '')  
+    #if ("$!defaultValue" == '')
       #set ($defaultValue = 'blank')
     #end
     <dd>#xwikiSelect('type', $options, $defaultValue, false, 'xwiki-select-small')</dd>
   #else
-    ## TODO: add the data-allowed-spaces for this template
-    <input type="hidden" name="templateprovider" value="$template" />
+    <input type="hidden" name="template" value="$escapetool.xml($template)" />
   #end
 #end
 #set ($discard = $xwiki.jsfx.use('js/xwiki/create.js', {'forceSkinAction': true}))
