XWIKI-12331: Errors that occur when deleting document with many large attachments return a "200 OK" status code Fixed

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/exceptioninline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/exceptioninline.vm
@@ -1,3 +1,6 @@
+#if ($response.status <= 200)
+  $response.setStatus(500)
+#end
 #set($message = $xcontext.message)
 #if($message)
   #xwikimessageboxstart($services.localization.render('notice') $services.localization.render($message))
